--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ padding-left: 0px;
 color: #6c875f;
 }
 #o {
+  justify-content: space-around;
+  align-items: center;
     background-color: rgb(255, 255, 255);
 }
 .sered {
@@ -63,7 +65,7 @@ height: 123px;
 .top {
     margin-top: 8px;
 margin-left: 100px;
-font-size: 38px;
+font-size: 34px;
 text-decoration: none;
 color: #FCF1EF;
 text-align: right;
@@ -119,7 +121,8 @@ margin-right: auto;
 .pecna:hover {
     transform: scale(1.1);
 }
-.center {
+.center { 
+  justify-content: center;
   text-align: center;
     height: 850px;
 }
@@ -142,7 +145,7 @@ margin-right: auto;
     background-size: cover;
 }
 #tr {
-    padding-top: 200px;
+    margin-top: 200px;
 }
 .karzan {
     width: 350px;
@@ -152,9 +155,8 @@ margin-right: auto;
     margin-top: 150px;
 }
 .product-description {
-  max-width: 400px;
-  display: block;
-  padding-left: 100px;
+  
+  padding-left: 37%;
   width: 25%;
   padding-top: 20px;
   font-size: 25px;
@@ -164,14 +166,21 @@ margin-right: auto;
   text-align: center;
   height: 850px;
 }
-.zzz {
-    display: block;
-  padding-left: 100px;
-  width: 25%;
-  padding-top: 20px;
-  font-size: 25px;
-  color: #0b0c0c;
+.add-to-cart {
+   font-size: large;
+    background-color: #d9dfc0;
 }
+.add-to-fav {
+    font-size: large;
+     background-color: #d9dfc0;
+ }
+.zzz {
+  position: relative;
+  color: #0b0c0c;
+  text-align: center;
+
+}
+
 
 .iskr {
     background-image: url('img/ii.jpg');
@@ -249,11 +258,7 @@ margin-right: auto;
     background-size: cover; 
 }
 
-h1 {
-    padding: 30px;
-    text-align: center;
-    color: #ebecec;
-}
+
 .ima, .tip, .vam {
     color: #ebecec;
     font-size: 20px;
@@ -290,7 +295,7 @@ color: #6c875f;
     display:block;
 }
 .k div ul li a:hover {
-    background-color: #b295cf;
+    background-color: #d9dfc0;
     color: #544033;
 }
 .k div ul li ul {
@@ -383,164 +388,18 @@ absolute; visibility: hidden; }
 .alb div ul li:hover > ul {
     display: initial;
 }
-
-
-.cart {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: #364364;
-    transition: 0.1s;
-    cursor: pointer;
-    position: fixed; /* Фиксированное расположение */
-    top: 50px; /* в правом верхнем углу */
-    right: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    object-fit: contain;
-    padding: 15px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Увеличиваем кнопку при наведении на нее */
-  .cart:hover {
-    transform: scale(1.1);
-  }
-  
-  /* Стилизуем счетчик товаров */
-  .cart__num {
-    position: absolute;
-    background-color: #d62240;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    top: -5px;
-    right: -5px;
-  }
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.33); /* Небольшое затемнение на фоне */
-    z-index: 1000; /* Поверх всех окон */
-    width: 100%;
-    height: 100%;
-    display: none; /* По умолчанию скрываем окно */
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    overflow-y: scroll;
-  }
-  
-  /* Стилизация контейнера окна */
-  .popup__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* Распределяем элементы внутри равномерно */
-    width: 100%;
-    max-width: 800px;
-    min-height: 300px;
-    background-color: #fff;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    position: relative;
-  }
-  
-  /* Элементы окна (заголовок, список товаров, вывод стоимости) */
-  .popup__item {
-    border-bottom: 1px solid #ddd;
-    padding: 20px;
-  }
-  
+.id {
+  color: #282b2bf8;
+position: absolute;
  
-  
-  .popup__title {
-    font-size: 20px;
-  }
-  
-  /* Стили для вывода товара */
-  .popup__product {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  
-  .popup__product-wrap {
-    display: flex;
-    align-items: center;
-  }
-  
-  .popup__product-image {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-    margin-right: 10px;
-  }
-  
-  .popup__product-title {
-    max-width: 300px;
-    font-weight: 500;
-  }
-  
-  .popup__product-price {
-    font-size: 18px;
-    margin-right: 15px;
-  }
-  
-  /* Стили для кнопки удаления товара */
-  .popup__product-delete {
-    font-size: 12px;
-    padding: 5px;
-    cursor: pointer;
-    color: #d62240;
-  }
-  
-  /* Стили для вывода стоимости товаров */
-  .popup__cost {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 5px;
-  }
-  
-  .popup__cost-title {
-    margin-right: 15px;
-    font-size: 20px;
-    color: #364364;
-    text-align: right;
-  }
-  
-  .popup__cost-value {
-    font-size: 20px;
-  }
-  
-  /* Стили для кнопки закрытия окна */
-  .popup__close {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    right: 0;
-    padding: 20px;
-    color: rgba(54, 67, 100, 0.7);
-    font-size: 20px;
-  }
-  
-  .popup__close:hover {
-    color: rgb(54, 67, 100);
-  }
-  
-  .popup--open {
-    display: flex;
-  }
+  right: 500px;
+}
+.geo {
 
-#tgt, #rer{
-  background-color: red;
+ position:relative;
+ left: -250px;
+ top: 300px;
+}
+#ogeo {
+  background-color: #e4dcdcc7;
 }
